--- a/style.css
+++ b/style.css
@@ -31,16 +31,16 @@
 }
 
 .parallax.foto-1{
-				background-image:  url(../foto1.png);
+				background-image:  url(foto1.png);
 }
 .parallax.foto-2{
-				background-image:  url(../foto2.png);
+				background-image:  url(foto2.png);
 }
 .parallax.foto-3{
-				background-image:  url(../foto3.png);
+				background-image:  url(foto3.png);
 }
 
 .parallax.foto-4{
-				background-image:  url(../foto4.png);
+				background-image:  url(foto4.png);
 }
 
