--- a/style.css
+++ b/style.css
@@ -31,16 +31,16 @@
 }
 
 .parallax.foto-1{
-				background-image:  foto1.png;
+				background-image:  foto1.png
 }
 .parallax.foto-2{
-				background-image:  foto2.png;
+				background-image:  foto2.png
 }
 .parallax.foto-3{
-				background-image:  foto3.png;
+				background-image:  foto3.png
 }
 
 .parallax.foto-4{
-				background-image:  foto4.png;
+				background-image:  foto4.png
 
 
